--- a/Dockerfile.streets-gl
+++ b/Dockerfile.streets-gl
@@ -1,27 +1,26 @@
 FROM node:16-alpine
 
-RUN apk add --no-cache git patch
+RUN apk add --no-cache git
 
 WORKDIR /usr/src/streets-gl
 
-COPY ./streets-gl/package.json /usr/src/streets-gl
-COPY ./streets-gl/package-lock.json /usr/src/streets-gl
+RUN git clone --depth 1 https://github.com/StrandedKitty/streets-gl.git /usr/src/streets-gl
+
 RUN npm ci
 
-
-COPY ./streets-gl /usr/src/streets-gl
 COPY ./patch-streets-gl-config.patch /usr/src/streets-gl
-RUN patch -p1 < ./patch-streets-gl-config.patch
+RUN git apply ./patch-streets-gl-config.patch
+
 RUN npm run build
 
 FROM node:16-alpine
 
-WORKDIR /usr/src/streets-gl
+WORKDIR /usr/bin/streets-gl
 
-COPY --from=0 /usr/src/streets-gl/build /usr/src/streets-gl/build
+COPY --from=0 /usr/src/streets-gl/build /usr/bin/streets-gl
 
 RUN npm install -g http-server
 
 EXPOSE 8080
 
-CMD [ "http-server", "./build", "-p", "8080" ]
+CMD [ "http-server", ".", "-p", "8080" ]
